--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ before_script:
   - sudo apt-get update -qq
   - sudo apt-get install -y liquidsoap liquidsoap-plugin-all
 install:
-  - cpan i Net::Telnet
+  - cpanm --quiet Net::Telnet
 script:
   - ./test.t
   
